--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,9 +92,10 @@ body {
   padding: 8px 50px;
   border: 0;
   margin: 0;
+  border-radius: 4px;
 }
 
-.navigation-item .button {
+.nav-link .button {
   padding: 8px 34px;
   min-width: 160px;
 }
@@ -166,9 +167,11 @@ body {
 .navigation {
   display: flex;
   margin: 0;
+  padding: 0;
   padding-left: 70px;
   padding-right: 70px;
   width: 1060px;
+  height: 64px;
 }
 
 .navigation-logo {
@@ -185,6 +188,7 @@ body {
   justify-content: flex-start;
   margin: 0;
   padding: 0;
+  align-items: center;
 }
 
 .navigation-link {
@@ -192,18 +196,18 @@ body {
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
-  text-align: center;
   text-decoration: none;
   text-transform: capitalize;
   color: #000000;
   padding: 20px 16px;
   margin: 0;
+  box-sizing: border-box;
 }
 
 .navigation-user {
   display: flex;
   flex-wrap: wrap;
-  max-width: 268px;
+  min-width: 268px;
   justify-content: flex-end;
   align-items: center;
   margin: 0;
@@ -211,28 +215,72 @@ body {
   padding: 0;
 }
 
-.navigation-user .navigation-link {
-  padding: 22px 12px;
+.nav-user {
+  display: block;
+  padding: 32px 22px;
+  box-sizing: border-box;
 }
-/*
-.navigation-favorite {
-  background-image: url("../images/service-icons/heart.svg");
-  background-repeat: no-repeat;
-  min-width: 20px;
-  min-height: 20px;
-  padding: 22px 12px;
-  margin: 0;
-  margin-right: 20px;
-  background-position: center;
-} */
 
-.amount-favorites {
-  background: #7db54f;
-  color: #ffffff;
+.nav-user.search {
+  background-image: url(../images/search.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 18px 18px;
+  position: relative;
+}
+.nav-user.favorites {
+  margin-right: 21px;
+  background-image: url(../images/heart.svg);
+  background-repeat: no-repeat;
+  position: relative;
+  background-position: center;
+
+  background-size: 20px 20px;
+}
+
+.nav-user.favorites::before {
+  display: flex;
+  content: "12";
+  background-color: #7db54f;
+  text-align: center;
   font-size: 10px;
   line-height: 10px;
+  border-radius: 50%;
+  position: absolute;
+  top: 12px;
+  right: 3px;
+  color: #ffffff;
+  padding: 5px;
 }
 
+/* .favorites {
+  /* display: flex;
+  position: absolute;
+  padding: 5px 4px;
+  border-radius: 50%;
+  top: 20px;
+  right: 100px;
+  background-color: #7db54f;
+  color: #fff;
+  font-size: 10px;
+  line-height: 10px;
+  display: block;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  text-align: center;
+  color: #ffffff;
+  border-radius: 50%;
+  background: #7db54f;
+  font-size: 10px;
+  position: absolute;
+  top: -11px;
+  right: -8px;
+} */
+
+header {
+  z-index: 1;
+}
 /* Hero */
 .hero {
   display: flex;
@@ -251,6 +299,7 @@ body {
   display: block;
   margin: auto;
   padding: 69px 274px;
+  margin-bottom: 21px;
 }
 
 .intro .title {
@@ -281,6 +330,16 @@ body {
   margin-bottom: 30px;
 }
 
+.title-item::after {
+  display: block;
+  width: 60px;
+  height: 2px;
+  content: "";
+  margin: 30px auto;
+  background-color: rgba(255, 255, 255, 0.3);
+  margin-bottom: 0;
+}
+
 .advantages-list {
   display: flex;
   flex-wrap: wrap;
@@ -295,6 +354,7 @@ body {
   width: 100%;
   background-color: #82b3d3;
   color: #ffffff;
+  margin: 0;
 }
 
 .dark-background .title-item {
@@ -303,7 +363,9 @@ body {
 .image-advantages {
   background-image: url(../images/advantages/street.jpg);
   background-size: cover;
+  background-repeat: no-repeat;
   width: 800px;
+  background-position: bottom;
 }
 
 .medium-background {
@@ -313,13 +375,14 @@ body {
 .advantages-container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
   min-height: 160px;
   width: 230px;
   margin: 0;
-  padding: 112px 85px;
+  padding: 102px 85px;
   margin-top: auto;
   margin-bottom: auto;
+  justify-content: center;
+  align-items: center;
 }
 
 .light-background {
@@ -727,6 +790,7 @@ body {
   grid-column: 1/-1;
   margin: 0;
   text-align: start;
+  text-transform: none;
 }
 
 .stars-4 {
