--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,8 +119,11 @@ body {
   background: #82b3d3;
   padding: 8px 20px;
   border: 0;
+  border-radius: 4px;
 }
 
+.select .button {
+}
 .selected {
   font-family: "PT Sans", sans-serif;
   font-size: 16px;
@@ -131,13 +134,18 @@ body {
 }
 
 .subscribe-form .button {
+  display: flex;
+  align-items: center;
   background: #82b3d3;
   font-size: 20px;
   line-height: 36px;
   margin: 0;
+  border-radius: 0px 4px 4px 0px;
+  min-width: 232px;
+  padding: 8px 50px;
 }
 
-.submit {
+/* .submit {
   font-family: "PT Sans", sans-serif;
   font-weight: 700;
   background: #82b3d3;
@@ -147,7 +155,8 @@ body {
   font-size: 16px;
   line-height: 20px;
   margin-bottom: 32px;
-}
+  border-radius: 0 4px 4px 0;
+} */
 
 .reset {
   font-weight: 700;
@@ -171,7 +180,7 @@ body {
   padding-left: 70px;
   padding-right: 70px;
   width: 1060px;
-  height: 64px;
+  /* height: 64px; */
 }
 
 .navigation-logo {
@@ -179,6 +188,7 @@ body {
   width: 140px;
   margin: 0;
   margin-right: 28px;
+  margin-bottom: -12px;
 }
 
 .nav-list {
@@ -204,6 +214,14 @@ body {
   box-sizing: border-box;
 }
 
+.nav-item-current {
+  text-decoration: underline;
+  text-underline-offset: 19px;
+  text-underline-position: under;
+  text-decoration-thickness: 2px;
+  text-decoration-color: #756257;
+}
+
 .navigation-user {
   display: flex;
   flex-wrap: wrap;
@@ -217,6 +235,8 @@ body {
 
 .nav-user {
   display: block;
+  min-height: 20px;
+  min-width: 20px;
   padding: 32px 22px;
   box-sizing: border-box;
 }
@@ -234,7 +254,6 @@ body {
   background-repeat: no-repeat;
   position: relative;
   background-position: center;
-
   background-size: 20px 20px;
 }
 
@@ -252,31 +271,6 @@ body {
   color: #ffffff;
   padding: 5px;
 }
-
-/* .favorites {
-  /* display: flex;
-  position: absolute;
-  padding: 5px 4px;
-  border-radius: 50%;
-  top: 20px;
-  right: 100px;
-  background-color: #7db54f;
-  color: #fff;
-  font-size: 10px;
-  line-height: 10px;
-  display: block;
-  width: 20px;
-  height: 20px;
-  line-height: 20px;
-  text-align: center;
-  color: #ffffff;
-  border-radius: 50%;
-  background: #7db54f;
-  font-size: 10px;
-  position: absolute;
-  top: -11px;
-  right: -8px;
-} */
 
 header {
   z-index: 1;
@@ -308,6 +302,19 @@ header {
 
 /* advantages */
 
+.advantages-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 181px;
+  width: 230px;
+  margin: 0;
+  padding: 102px 85px;
+  margin-top: auto;
+  margin-bottom: auto;
+  justify-content: center;
+  align-items: center;
+}
+
 .title {
   font-weight: 700;
   font-size: 30px;
@@ -316,7 +323,7 @@ header {
   text-align: center;
   color: #000000;
   margin-top: 0;
-  margin-bottom: 30px;
+  margin-bottom: 29px;
 }
 
 .title-item {
@@ -328,16 +335,22 @@ header {
   color: #000000;
   margin: 0;
   margin-bottom: 30px;
+  padding-left: 113px;
+  padding-right: 113px;
 }
 
-.title-item::after {
+.advantages-container .title-item::after {
   display: block;
   width: 60px;
   height: 2px;
   content: "";
   margin: 30px auto;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(0, 0, 0, 0.3);
   margin-bottom: 0;
+}
+
+.dark-background .title-item::after {
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .advantages-list {
@@ -360,29 +373,18 @@ header {
 .dark-background .title-item {
   color: #ffffff;
 }
+
 .image-advantages {
   background-image: url(../images/advantages/street.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   width: 800px;
   background-position: bottom;
+  margin: 0;
 }
 
 .medium-background {
   background-color: rgba(131, 179, 211, 0.2);
-}
-
-.advantages-container {
-  display: flex;
-  flex-direction: column;
-  min-height: 160px;
-  width: 230px;
-  margin: 0;
-  padding: 102px 85px;
-  margin-top: auto;
-  margin-bottom: auto;
-  justify-content: center;
-  align-items: center;
 }
 
 .light-background {
@@ -399,6 +401,10 @@ header {
 
 .dark-background p {
   color: #ffffff;
+}
+
+.bridge .title-item {
+  padding: 0;
 }
 
 .bridge {
@@ -433,11 +439,11 @@ header {
 .service-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
   min-height: 223px;
   width: 230px;
   margin: 0;
-  padding: 81px 85px;
+  padding: 80px 85px;
   margin-top: auto;
   margin-bottom: auto;
 }
@@ -448,7 +454,7 @@ header {
   width: 75px;
   height: 72px;
   margin: 0 auto;
-  margin-bottom: 30px;
+  margin-bottom: 31px;
 }
 
 .burger {
@@ -457,7 +463,7 @@ header {
   width: 74px;
   height: 70px;
   margin: 0 auto;
-  margin-bottom: 30px;
+  margin-bottom: 33px;
 }
 
 .gifts {
@@ -466,7 +472,7 @@ header {
   width: 64px;
   height: 76px;
   margin: 0 auto;
-  margin-bottom: 30px;
+  margin-bottom: 28px;
 }
 
 /* Поиск отелей */
@@ -504,7 +510,7 @@ header {
 }
 .subscribe-form {
   display: flex;
-  width: 684px;
+  /* width: 684px; */
   margin: auto;
 }
 .title.invert {
@@ -512,62 +518,69 @@ header {
   margin-bottom: 20px;
 }
 
-.field {
-  display: block;
+.field-mail {
+  font-size: 18px;
   box-sizing: border-box;
   line-height: 24px;
   min-height: 52px;
   width: 452px;
   font-family: "PT Sans", sans-serif;
   border: 0;
-  padding: 14px 20px;
+  padding: 11px 0 11px 17px;
   background-color: #f2f2f2;
+  border-radius: 4px 0 0 4px;
+  border: 3px solid transparent;
 }
 
 .subscribe .description {
-  margin-bottom: 54px;
+  margin-bottom: 55px;
 }
 
 /* Подвал */
+
 .footer-container {
   display: flex;
   width: 1060px;
   margin: 0 auto;
   padding: 40px 70px 30px;
   align-items: center;
-  justify-content: space-between;
 }
-
-.phone {
-  display: flex;
-  margin: 0 auto;
-  text-align: center;
-}
-
 .address-phone {
+  display: flex;
+  flex-wrap: wrap;
   font-size: 40px;
   line-height: 40px;
   text-transform: uppercase;
   text-decoration: none;
   color: #000000;
   min-width: 331px;
+  margin: 0;
+  justify-content: center;
+  padding: 5px 195px;
+  box-sizing: border-box;
 }
 
 .about-text {
+  display: flex;
+  box-sizing: border-box;
+  margin: 0;
+  justify-content: center;
   margin-left: auto;
   min-width: 115px;
   align-items: center;
+  padding: 8px auto;
 }
 
 /* Соц.сети */
 .list-social {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
-  margin-right: 42px;
-  max-width: 142px;
+  min-width: 142px;
+  margin-right: 41px;
+  justify-content: center;
+  align-items: center;
 }
 
 .item-social {
