--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,6 +79,7 @@ body {
 .button {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   box-sizing: border-box;
   background-color: #756157;
   font-weight: 700;
@@ -112,7 +113,7 @@ body {
   max-width: 590px;
 }
 
-.link-card {
+.link-card .button {
   padding: 8px 26px;
 }
 
@@ -216,7 +217,7 @@ body {
   margin: 0;
   box-sizing: border-box;
 }
-
+/* ПЕРЕДЕЛАТЬ */
 .nav-item-current {
   text-decoration: underline;
   text-underline-offset: 19px;
@@ -596,7 +597,7 @@ header {
   margin-left: auto;
   min-width: 115px;
   align-items: center;
-  padding: 8px auto;
+  padding: 8px 0;
 }
 
 .about-text:hover path,
@@ -765,7 +766,7 @@ header {
   margin: 0 auto;
   flex-wrap: wrap;
   box-sizing: border-box;
-  padding: 50px 70px 40px;
+  padding: 50px 70px 60px;
 }
 
 .result-search {
@@ -819,9 +820,10 @@ header {
   grid-template-columns: repeat(3, 340px);
   margin: 0;
   padding: 0;
-  margin-bottom: 80px;
-  border-bottom: 1px solid #e6e6e6;
+  margin-bottom: 40px;
+  padding-bottom: 40px;
   box-sizing: border-box;
+  border-bottom: 1px solid #e6e6e6;
 }
 
 .card {
@@ -843,6 +845,7 @@ header {
   margin: 0;
   text-align: start;
   text-transform: none;
+  padding: 0;
 }
 
 .stars-4 {
@@ -879,6 +882,27 @@ header {
 .card-price {
   justify-self: end;
 }
+
+/* .cards::after {
+  display: block;
+  height: 1px;
+  width: 100%;
+  content: "";
+  margin: 0;
+  background-color: #e6e6e6;
+  margin-bottom: 40px;
+} */
+/* ДЛЯ ХЕДЕРА для черточки
+.pagination {
+  display: flex;
+  max-width: 1060px;
+  margin: 0;
+  padding: 0;
+  flex-wrap: wrap;
+  border-top: 1px solid #e6e6e6;
+  padding-top: 40px;
+  box-sizing: border-box;
+} */
 /* Пагинация */
 
 .pagination {
@@ -887,6 +911,8 @@ header {
   margin: 0;
   padding: 0;
   flex-wrap: wrap;
+  padding-top: 39px;
+  box-sizing: border-box;
 }
 
 .pagination-item {
