--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,6 +101,20 @@ body {
   background-color: rgba(97, 80, 72, 1);
 }
 
+.button:focus {
+  background: rgba (255, 255, 255, 0.3);
+}
+
+.button:disabled {
+  background: rgba (229, 229, 229, 1);
+  pointer-events: none;
+}
+
+.button:active {
+  background-color: #756157;
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .nav-link .button {
   padding: 8px 34px;
   min-width: 160px;
@@ -123,9 +137,10 @@ body {
   font-size: 16px;
   line-height: 20px;
   background: #82b3d3;
-  padding: 8px 20px;
+  padding: 7px 20px;
   border: 0;
   border-radius: 4px;
+  box-sizing: border-box;
 }
 
 .select.button:hover,
@@ -149,6 +164,16 @@ body {
   background: #82b3d3;
   padding: 8px 18px;
   background-color: #7db54f;
+}
+
+.selected.button:hover,
+.selected.button:focus-visible {
+  outline: none;
+  background-color: rgba(108, 158, 106, 1);
+}
+.selected.button:active {
+  background-color: rgba(125, 181, 79, 1);
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .subscribe-form .button {
@@ -377,6 +402,8 @@ header {
 
 .dark-background .title-item {
   color: #ffffff;
+  padding-left: 111px;
+  padding-right: 113px;
 }
 
 .image-advantages {
@@ -505,7 +532,6 @@ header {
   padding: 96px 258px 104px;
 }
 
-/* Подписка главная */
 .subscribe.main {
   background-image: url("../images/subscribe.jpg");
   background-repeat: no-repeat;
@@ -516,9 +542,14 @@ header {
 .subscribe-form {
   display: flex;
   margin: auto;
+  box-sizing: border-box;
 }
 .title.invert {
   color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.subscribe .title {
   margin-bottom: 20px;
 }
 
@@ -530,31 +561,26 @@ header {
   width: 452px;
   font-family: "PT Sans", sans-serif;
   border: 0;
-  padding: 11px 0 11px 17px;
+  padding: 13px 0 11px 17px;
   background-color: #f2f2f2;
   border-radius: 4px 0 0 4px;
   color: rgba(0, 0, 0, 0.6);
   border: 3px solid transparent;
 }
+input {
+  outline: none;
+}
 
 .subscribe .description {
-  margin-bottom: 55px;
+  margin-bottom: 54px;
+  display: flex;
+  justify-content: center;
 }
 
-.field-mail:hover {
-  border: 3px solid #83b3d3;
-}
+.field-mail:hover,
 .field-mail:active,
 .field-mail:focus-visible {
-  border: none;
-  outline: 2px solid #83b3d3;
-  outline-offset: -2px;
   border-radius: 4px 0 0 4px;
-}
-.field-mail:disabled {
-  border: 2px solid rgba(0, 0, 0, 0.3);
-  color: rgba(0, 0, 0, 0.3);
-  pointer-events: none;
 }
 
 /* Подвал */
@@ -615,7 +641,7 @@ header {
   margin: 0;
   padding: 0;
   min-width: 142px;
-  margin-right: 41px;
+  margin-right: 42px;
   justify-content: center;
   align-items: center;
 }
@@ -649,7 +675,7 @@ header {
   padding: 0;
   border: 0;
   box-sizing: border-box;
-  padding: 35px 70px 70px 70px;
+  padding: 35px 70px 68px 70px;
 }
 
 .inner-header-title {
@@ -771,20 +797,39 @@ header {
 
 .result-search {
   display: flex;
+  align-items: center;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  box-sizing: border-box;
+  margin-bottom: 40px;
+  flex-wrap: wrap;
 }
 
 .result-search .title {
   margin: 0;
-  margin-right: 200px;
+  margin-right: 199px;
   text-transform: uppercase;
 }
 
 .select-control {
+  display: flex;
   width: 292px;
   margin-right: 70px;
   min-height: 49px;
-  padding: 10px 14px;
+  padding: 5px 15px 5px 20px;
   box-sizing: border-box;
+  border: 2px solid #e5e5e5;
+  border-radius: 4px;
+  background-image: url(../images/service-icons/arrow.svg);
+  background-repeat: no-repeat;
+  background-position: center right 16px;
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 21px;
+  color: #333;
+  appearance: none;
 }
 
 .show {
@@ -821,7 +866,7 @@ header {
   margin: 0;
   padding: 0;
   margin-bottom: 40px;
-  padding-bottom: 40px;
+  padding-bottom: 38px;
   box-sizing: border-box;
   border-bottom: 1px solid #e6e6e6;
 }
@@ -831,13 +876,17 @@ header {
   grid-template-columns: repeat(2, 140px);
   gap: 16px 20px;
   grid-template-rows: 212px 1fr;
-  padding: 20px;
+  padding: 19px;
+  border-radius: 4px;
+  border: 1px solid #e6e6e6;
+  box-sizing: border-box;
 }
 
 .card-image {
   display: block;
   object-fit: contain;
   grid-column: 1/-1;
+  background-color: #756157;
 }
 
 .card .title-item {
@@ -846,6 +895,7 @@ header {
   text-align: start;
   text-transform: none;
   padding: 0;
+  display: block;
 }
 
 .stars-4 {
@@ -870,13 +920,16 @@ header {
 }
 
 .rate {
-  display: block;
+  display: flex;
+  align-items: center;
   box-sizing: border-box;
-  padding: 8px 22px;
+  padding: 9px 22px;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
   background-color: #f2f2f2;
+  border-radius: 4px;
+  justify-content: center;
 }
 
 .card-price {
@@ -911,7 +964,6 @@ header {
   margin: 0;
   padding: 0;
   flex-wrap: wrap;
-  padding-top: 39px;
   box-sizing: border-box;
 }
 
@@ -935,6 +987,22 @@ header {
   text-decoration: none;
   text-align: center;
   padding: 12px 18px;
+  border-radius: 4px;
+}
+
+.pagination-link:hover,
+.pagination-link:focus-visible {
+  outline: none;
+  background-color: #68a2ca;
+  border: 1px solid #82b3d3;
+}
+.pagination-link:active {
+  background-color: #82b3d3;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.pagination-item:not(:last-child) {
+  margin-right: 8px;
 }
 
 .pagination-item:not(:last-child) {
@@ -943,13 +1011,27 @@ header {
 
 .pagination-current {
   background: #f2f2f2;
-  text-transform: uppercase;
-  text-decoration: none;
   color: #000000;
 }
 
-.pagination-link.points {
+.pagination-current:hover,
+.pagination-current:focus-visible,
+.pagination-current:active {
+  background-color: #f2f2f2;
+  color: #000;
+  border: none;
+}
+
+.points {
   text-decoration: none;
   color: #000000;
-  background-color: #ffffff;
+  background-color: inherit;
+}
+
+.points:hover,
+.points:focus-visible,
+.points :active {
+  background-color: #f2f2f2;
+  opacity: 0.3;
+  border: none;
 }
