--- a/7/styles/styles.css
+++ b/7/styles/styles.css
@@ -79,6 +79,7 @@ body {
 .button {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   box-sizing: border-box;
   background-color: #756157;
   font-weight: 700;
@@ -100,6 +101,20 @@ body {
   background-color: rgba(97, 80, 72, 1);
 }
 
+.button:focus {
+  background: rgba (255, 255, 255, 0.3);
+}
+
+.button:disabled {
+  background: rgba (229, 229, 229, 1);
+  pointer-events: none;
+}
+
+.button:active {
+  background-color: #756157;
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .nav-link .button {
   padding: 8px 34px;
   min-width: 160px;
@@ -112,7 +127,7 @@ body {
   max-width: 590px;
 }
 
-.link-card {
+.link-card .button {
   padding: 8px 26px;
 }
 
@@ -122,9 +137,10 @@ body {
   font-size: 16px;
   line-height: 20px;
   background: #82b3d3;
-  padding: 8px 20px;
+  padding: 7px 20px;
   border: 0;
   border-radius: 4px;
+  box-sizing: border-box;
 }
 
 .select.button:hover,
@@ -150,6 +166,16 @@ body {
   background-color: #7db54f;
 }
 
+.selected.button:hover,
+.selected.button:focus-visible {
+  outline: none;
+  background-color: rgba(108, 158, 106, 1);
+}
+.selected.button:active {
+  background-color: rgba(125, 181, 79, 1);
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .subscribe-form .button {
   display: flex;
   align-items: center;
@@ -162,16 +188,38 @@ body {
   padding: 8px 50px;
 }
 
-.reset {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
+.cancel {
   color: #ffffff;
-  border: 0;
   background: transparent;
+  border-radius: 4px;
+  font-family: "PT Sans", sans-serif;
+}
+
+.cancel.button:focus-visible {
+  border: 3px solid #83b3d3;
+  background: transparent;
+}
+
+.cancel.button:active {
+  color: rgba(255, 255, 255, 1);
+  background: transparent;
+}
+
+.cancel.button:hover {
+  opacity: 0.6;
+  background: transparent;
+}
+
+.cancel.button:focus {
+  opacity: 0.3;
+  background: transparent;
+}
+
+.button-search .select {
   padding: 8px 50px;
 }
 
+.
 /* Шапка */
 .page-header {
   display: flex;
@@ -216,7 +264,7 @@ body {
   margin: 0;
   box-sizing: border-box;
 }
-
+/* ПЕРЕДЕЛАТЬ */
 .nav-item-current {
   text-decoration: underline;
   text-underline-offset: 19px;
@@ -376,6 +424,8 @@ header {
 
 .dark-background .title-item {
   color: #ffffff;
+  padding-left: 111px;
+  padding-right: 113px;
 }
 
 .image-advantages {
@@ -504,7 +554,6 @@ header {
   padding: 96px 258px 104px;
 }
 
-/* Подписка главная */
 .subscribe.main {
   background-image: url("../images/subscribe.jpg");
   background-repeat: no-repeat;
@@ -515,9 +564,14 @@ header {
 .subscribe-form {
   display: flex;
   margin: auto;
+  box-sizing: border-box;
 }
 .title.invert {
   color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.subscribe .title {
   margin-bottom: 20px;
 }
 
@@ -529,31 +583,26 @@ header {
   width: 452px;
   font-family: "PT Sans", sans-serif;
   border: 0;
-  padding: 11px 0 11px 17px;
+  padding: 13px 0 11px 17px;
   background-color: #f2f2f2;
   border-radius: 4px 0 0 4px;
   color: rgba(0, 0, 0, 0.6);
   border: 3px solid transparent;
 }
+input {
+  outline: none;
+}
 
 .subscribe .description {
-  margin-bottom: 55px;
+  margin-bottom: 54px;
+  display: flex;
+  justify-content: center;
 }
 
-.field-mail:hover {
-  border: 3px solid #83b3d3;
-}
+.field-mail:hover,
 .field-mail:active,
 .field-mail:focus-visible {
-  border: none;
-  outline: 2px solid #83b3d3;
-  outline-offset: -2px;
   border-radius: 4px 0 0 4px;
-}
-.field-mail:disabled {
-  border: 2px solid rgba(0, 0, 0, 0.3);
-  color: rgba(0, 0, 0, 0.3);
-  pointer-events: none;
 }
 
 /* Подвал */
@@ -596,7 +645,7 @@ header {
   margin-left: auto;
   min-width: 115px;
   align-items: center;
-  padding: 8px auto;
+  padding: 8px 0;
 }
 
 .about-text:hover path,
@@ -614,7 +663,7 @@ header {
   margin: 0;
   padding: 0;
   min-width: 142px;
-  margin-right: 41px;
+  margin-right: 42px;
   justify-content: center;
   align-items: center;
 }
@@ -648,7 +697,7 @@ header {
   padding: 0;
   border: 0;
   box-sizing: border-box;
-  padding: 35px 70px 70px 70px;
+  padding: 35px 70px 68px 70px;
 }
 
 .inner-header-title {
@@ -671,11 +720,10 @@ header {
 .breadcrumbs-item {
   display: flex;
   font-size: 16px;
-  align-items: baseline;
 }
 
 .breadcrumbs-item:not(:last-child) {
-  margin-right: 10px;
+  margin-right: 15px;
 }
 
 .breadcrumbs-link {
@@ -685,21 +733,43 @@ header {
   height: 15px;
   align-items: center;
   justify-content: center;
+  padding-bottom: 2px;
+}
+
+.breadcrumbs-link:hover {
+  opacity: 0.6;
+}
+.breadcrumbs-link:active {
+  opacity: 0.3;
+}
+
+.breadcrumbs-item::after {
+  content: "";
+  width: 13px;
+  height: 15px;
+  background-image: url(../images/service-icons/further.svg);
+  background-repeat: no-repeat;
+  background-position: center left 12px;
+}
+
+.breadcrumbs-item:last-child::after {
+  content: none;
 }
 
 .catalog-filters {
   display: flex;
   width: 1060px;
   margin: 0;
+  align-items: center;
 }
 
 .catalog-filter {
-  min-width: 151px;
   margin: 0;
   padding: 0;
-  margin-right: 70px;
+  min-width: 150px;
   min-height: 157px;
   border: none;
+  margin-right: 70px;
 }
 
 .catalog-filter-title {
@@ -707,6 +777,8 @@ header {
   font-size: 20px;
   line-height: 24px;
   text-transform: capitalize;
+  margin: 0;
+  padding: 0;
   margin-bottom: 32px;
 }
 
@@ -731,11 +803,13 @@ header {
 .price-filter {
   margin: 0;
   margin-right: 70px;
+  width: 288px;
 }
 
 .wprapper-price {
   display: flex;
   margin-bottom: 36px;
+  justify-content: flex-end;
 }
 
 .wprapper-price .control-input {
@@ -757,7 +831,12 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  padding: 0;
+  height: 160px;
+  gap: 34px;
+  box-sizing: border-box;
 }
+
 /* Сортировка */
 .wrapper-search {
   display: flex;
@@ -765,52 +844,88 @@ header {
   margin: 0 auto;
   flex-wrap: wrap;
   box-sizing: border-box;
-  padding: 50px 70px 40px;
+  padding: 50px 70px 60px;
 }
 
 .result-search {
   display: flex;
+  align-items: center;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  box-sizing: border-box;
+  margin-bottom: 40px;
+  flex-wrap: wrap;
 }
 
 .result-search .title {
   margin: 0;
-  margin-right: 200px;
+  margin-right: 199px;
   text-transform: uppercase;
 }
 
 .select-control {
+  display: flex;
   width: 292px;
   margin-right: 70px;
   min-height: 49px;
-  padding: 10px 14px;
+  padding: 5px 15px 5px 20px;
   box-sizing: border-box;
+  border: 2px solid #e5e5e5;
+  border-radius: 4px;
+  background-image: url(../images/service-icons/arrow.svg);
+  background-repeat: no-repeat;
+  background-position: center right 16px;
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 21px;
+  color: #333;
+  appearance: none;
 }
 
 .show {
   display: flex;
+  flex-wrap: wrap;
   list-style-type: none;
-  justify-content: space-between;
+  justify-content: flex-end;
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
-  max-width: 160px;
+  width: 160px;
   align-items: center;
+  box-sizing: border-box;
 }
 
 .button-show {
   display: flex;
-  width: 48px;
-  height: 18px;
   align-items: center;
   justify-content: center;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  padding: 17px;
+  border: 2px solid #e5e5e5;
+  border-radius: 4px;
+  padding: 1px 12px 9px 15px;
+  max-height: 48px;
 }
 
 .button-show:not(:last-child) {
   margin-right: 8px;
 }
 
+.active {
+  border: 2px solid #000;
+  border-radius: 4px;
+}
+
+.button-show:hover {
+  border: 2px solid #000;
+}
+.button-show:focus-visible {
+  outline: 2px solid #68a2ca;
+  outline-offset: -2px;
+}
 /* Гостиницы */
 
 .cards {
@@ -819,9 +934,10 @@ header {
   grid-template-columns: repeat(3, 340px);
   margin: 0;
   padding: 0;
-  margin-bottom: 80px;
-  border-bottom: 1px solid #e6e6e6;
+  margin-bottom: 40px;
+  padding-bottom: 38px;
   box-sizing: border-box;
+  border-bottom: 1px solid #e6e6e6;
 }
 
 .card {
@@ -829,13 +945,17 @@ header {
   grid-template-columns: repeat(2, 140px);
   gap: 16px 20px;
   grid-template-rows: 212px 1fr;
-  padding: 20px;
+  padding: 19px;
+  border-radius: 4px;
+  border: 1px solid #e6e6e6;
+  box-sizing: border-box;
 }
 
 .card-image {
   display: block;
   object-fit: contain;
   grid-column: 1/-1;
+  background-color: #756157;
 }
 
 .card .title-item {
@@ -843,6 +963,8 @@ header {
   margin: 0;
   text-align: start;
   text-transform: none;
+  padding: 0;
+  display: block;
 }
 
 .stars-4 {
@@ -867,18 +989,42 @@ header {
 }
 
 .rate {
-  display: block;
+  display: flex;
+  align-items: center;
   box-sizing: border-box;
-  padding: 8px 22px;
+  padding: 9px 22px;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
   background-color: #f2f2f2;
+  border-radius: 4px;
+  justify-content: center;
 }
 
 .card-price {
   justify-self: end;
 }
+
+/* .cards::after {
+  display: block;
+  height: 1px;
+  width: 100%;
+  content: "";
+  margin: 0;
+  background-color: #e6e6e6;
+  margin-bottom: 40px;
+} */
+/* ДЛЯ ХЕДЕРА для черточки
+.pagination {
+  display: flex;
+  max-width: 1060px;
+  margin: 0;
+  padding: 0;
+  flex-wrap: wrap;
+  border-top: 1px solid #e6e6e6;
+  padding-top: 40px;
+  box-sizing: border-box;
+} */
 /* Пагинация */
 
 .pagination {
@@ -887,6 +1033,7 @@ header {
   margin: 0;
   padding: 0;
   flex-wrap: wrap;
+  box-sizing: border-box;
 }
 
 .pagination-item {
@@ -909,6 +1056,22 @@ header {
   text-decoration: none;
   text-align: center;
   padding: 12px 18px;
+  border-radius: 4px;
+}
+
+.pagination-link:hover,
+.pagination-link:focus-visible {
+  outline: none;
+  background-color: #68a2ca;
+  border: 1px solid #82b3d3;
+}
+.pagination-link:active {
+  background-color: #82b3d3;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.pagination-item:not(:last-child) {
+  margin-right: 8px;
 }
 
 .pagination-item:not(:last-child) {
@@ -917,13 +1080,27 @@ header {
 
 .pagination-current {
   background: #f2f2f2;
-  text-transform: uppercase;
-  text-decoration: none;
   color: #000000;
 }
 
-.pagination-link.points {
+.pagination-current:hover,
+.pagination-current:focus-visible,
+.pagination-current:active {
+  background-color: #f2f2f2;
+  color: #000;
+  border: none;
+}
+
+.points {
   text-decoration: none;
   color: #000000;
-  background-color: #ffffff;
+  background-color: inherit;
+}
+
+.points:hover,
+.points:focus-visible,
+.points :active {
+  background-color: #f2f2f2;
+  opacity: 0.3;
+  border: none;
 }
