--- a/styles/styles.css
+++ b/styles/styles.css
@@ -719,11 +719,12 @@ input {
 
 .breadcrumbs-item {
   display: flex;
+  align-items: center;
   font-size: 16px;
 }
 
 .breadcrumbs-item:not(:last-child) {
-  margin-right: 15px;
+  margin-right: 20px;
 }
 
 .breadcrumbs-link {
@@ -745,11 +746,13 @@ input {
 
 .breadcrumbs-item::after {
   content: "";
-  width: 13px;
-  height: 15px;
-  background-image: url(../images/service-icons/further.svg);
+  display: block;
+  width: 8px;
+  height: 21px;
+  background-image: url("../images/service-icons/further.svg");
   background-repeat: no-repeat;
-  background-position: center left 12px;
+  position: relative;
+  left: 10px;
 }
 
 .breadcrumbs-item:last-child::after {
