--- a/styles/styles.css
+++ b/styles/styles.css
@@ -592,6 +592,10 @@ header {
 input {
   outline: none;
 }
+.subscribe-email {
+  flex-grow: 1;
+  margin: 0;
+}
 
 .subscribe .description {
   margin-bottom: 54px;
@@ -697,7 +701,7 @@ input {
   padding: 0;
   border: 0;
   box-sizing: border-box;
-  padding: 35px 70px 68px 70px;
+  padding: 35px 70px 70px 70px;
 }
 
 .inner-header-title {
@@ -714,7 +718,7 @@ input {
   align-items: center;
   margin: 0;
   padding: 0;
-  margin-bottom: 40px;
+  margin-bottom: 37px;
 }
 
 .breadcrumbs-item {
@@ -942,6 +946,51 @@ input {
   margin: 0;
 }
 
+.slider {
+  position: relative;
+  height: 4px;
+  margin-bottom: 13px;
+  margin-top: 43px;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.range {
+  position: absolute;
+  left: 10px;
+  width: 206px;
+  height: 4px;
+  background-color: #fff;
+}
+
+.range-toggle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background: #ffffff;
+  border: 2px solid transparent;
+  border-radius: 20%;
+  cursor: pointer;
+}
+
+.toggle-min {
+  top: -8px;
+  left: -10px;
+  cursor: pointer;
+}
+
+.toggle-max {
+  top: -8px;
+  right: -13px;
+  cursor: pointer;
+}
+
+.range-toggle:active {
+  border: 2px solid #83b3d3;
+}
+.range-toggle:focus-visible {
+  outline: 3px solid #83b3d3;
+}
+
 .button-search {
   display: flex;
   flex-direction: column;
@@ -1060,7 +1109,7 @@ input {
   grid-template-columns: repeat(2, 140px);
   gap: 16px 20px;
   grid-template-rows: 212px 1fr;
-  padding: 20px;
+  padding: 19px;
   border-radius: 4px;
   border: 1px solid #e6e6e6;
   box-sizing: border-box;
@@ -1218,4 +1267,57 @@ input {
   background-color: #f2f2f2;
   opacity: 0.3;
   border: none;
+}
+
+/* Модальное окно */
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background: rgba(242, 242, 242, 0.8);
+  /* display: none; */
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 64px 70px;
+  background-color: #ffffff;
+  width: 448px;
+}
+
+.modal-title {
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px;
+  text-transform: uppercase;
+  color: rgba (0, 0, 0, 1);
+  margin: 0;
+  padding: 0;
+  margin-bottom: 64px;
+}
+
+.close-button {
+  position: absolute;
+  padding: 0;
+  top: 0;
+  right: 0;
+  width: 56px;
+  height: 44px;
+  background-color: #ffffff;
+  border: none;
+  background-image: url("../images/service-icons/close.svg");
+  background-repeat: no-repeat;
+  background-position: center right 10px;
+  cursor: pointer;
+}
+
+.field {
+  background-image: url("../images/service-icons/calendar.svg");
+  background-repeat: no-repeat;
+  background-position: center right 20px;
 }
