--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,7 +42,7 @@ body {
 
 .main-container {
   margin: 0;
-  flex-grow: 1;
+  flex-grow: 1;description
 }
 
 .page-container {
@@ -73,6 +73,7 @@ body {
   line-height: 21px;
   color: #333333;
   margin: 0;
+  font-weight: 400;
 }
 /* Кнопки-ссылки */
 
@@ -264,7 +265,7 @@ body {
   margin: 0;
   box-sizing: border-box;
 }
-/* ПЕРЕДЕЛАТЬ */
+
 .nav-item-current {
   text-decoration: underline;
   text-underline-offset: 19px;
@@ -446,12 +447,14 @@ header {
 }
 
 .description {
-  font-size: 22px;
   line-height: 26px;
   text-align: center;
   margin: 0;
   padding: 0;
-}
+  font-weight: 400;
+  font-size: 22px;
+  }
+
 
 .dark-background p {
   color: #ffffff;
@@ -589,9 +592,7 @@ header {
   color: rgba(0, 0, 0, 0.6);
   border: 3px solid transparent;
 }
-input {
-  outline: none;
-}
+
 .subscribe-email {
   flex-grow: 1;
   margin: 0;
@@ -607,6 +608,7 @@ input {
 .field-mail:active,
 .field-mail:focus-visible {
   border-radius: 4px 0 0 4px;
+  outline: none;
 }
 
 /* Подвал */
@@ -753,7 +755,7 @@ input {
   display: block;
   width: 8px;
   height: 21px;
-  background-image: url("../images/service-icons/further.svg");
+  background-image: url("../images/service-icons/afurther.svg");
   background-repeat: no-repeat;
   position: relative;
   left: 10px;
@@ -904,10 +906,11 @@ input {
 
 .wprapper-price .control-input:hover {
   background-color: #e6e6e6;
+  outline: none
 }
 
 .wprapper-price .control-input:focus-visible {
-  outline: 3px solid #83b3d3;
+  outline: none;
   background-color: #e6e6e6;
 }
 
@@ -1027,6 +1030,7 @@ input {
   margin: 0;
   margin-right: 199px;
   text-transform: uppercase;
+  max-width: 353px;
 }
 
 .select-control {
@@ -1052,44 +1056,45 @@ input {
   display: flex;
   flex-wrap: wrap;
   list-style-type: none;
-  justify-content: flex-end;
-  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 160px;
   margin: 0;
   padding: 0;
-  width: 160px;
   align-items: center;
   box-sizing: border-box;
+  gap: 8px;
 }
 
 .button-show {
   display: flex;
-  align-items: center;
   justify-content: center;
-  margin: 0;
-  padding: 0;
+  align-items: center;
+}
+
+.view {
+  display: flex;
+  padding: 14px 13px 16px 15px;
+  align-items: center;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
   box-sizing: border-box;
-  border: 2px solid #e5e5e5;
-  border-radius: 4px;
-  padding: 1px 12px 9px 15px;
-  max-height: 48px;
-}
+  }
 
-.button-show:not(:last-child) {
-  margin-right: 8px;
-}
-
-.active {
+.active .view {
   border: 2px solid #000;
-  border-radius: 4px;
+
 }
 
-.button-show:hover {
+
+.view:hover {
   border: 2px solid #000;
 }
-.button-show:focus-visible {
-  outline: 2px solid #68a2ca;
+
+.view:focus-visible {
+  outline: 2px solid #68A2CA;
   outline-offset: -2px;
 }
+
 /* Гостиницы */
 
 .cards {
@@ -1278,7 +1283,7 @@ input {
   width: 100%;
   height: 100%;
   background: rgba(242, 242, 242, 0.8);
-  /* display: none; */
+  display: none;
 }
 
 .modal {
