--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1296,6 +1296,11 @@ header {
   box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 0.15);
 }
 
+.modal-form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 23px;
+}
 .modal-title {
   font-size: 30px;
   font-style: normal;
@@ -1352,14 +1357,28 @@ header {
   background-position: center right 20px;
 }
 
-.modal-form-date {
-  display: flex;
-}
-
 .field-group {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0;
   margin: 0;
+}
+
+.modal-info {
+  margin: 0;
+  margin-left: 137px;
+  margin-top: 4px;
+  font-size: 16px;
+  line-height: 21px;
+  color: #333333;
+  padding: 0 20px;
+}
+
+.error {
+  color: #ff5757;
+}
+
+.modal-form-date {
+  width: 100%;
 }
